--- a/config/config_OvCa_LR.yml
+++ b/config/config_OvCa_LR.yml
@@ -1,6 +1,7 @@
 Global:
-  outdir: /cluster/work/bewi/members/dondia/projects/long_reads_tree/LongSom_out
-  data: /cluster/work/bewi/members/dondia/projects/long_reads_tree/data/SComatic_input
+  outdir: /cluster/work/bewi/members/dondia/projects/long_reads_tree/LongSom_out/OvCa_LR
+  data: /cluster/work/bewi/members/dondia/projects/long_reads_tree/data/SComatic_input/OvCa_LR
+  qc: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/LongSom/QC/scripts
   scomatic: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/LongSom/SComatic/scripts
   bnpc: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/LongSom/BnpC
   annovar: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/annovar
@@ -26,11 +27,20 @@ PoN:
 
 CellTypeReannotation:
   cancer_ctype: HGSOC
-  min_variants: 2
+  noncancer_ctype: Non-HGSOC
+  ctypes: ['HGSOC', 'Non-HGSOC']
   celltypes:
     HGSOC: ""
     Non-HGSOC: ""
   ctype_column: Automated_Cell_type
+  chrM_contaminant: 'False'
+
+  min_variants: 3
+  
+  HCCV:
+    min_depth: 20
+    deltaVAF: 0.25
+    deltaCCF: 0.4
 
 SNVCalling:
   cancer_ctype: Cancer
@@ -39,6 +49,9 @@ SNVCalling:
     NonCancer: ""
   min_ac_reads: 3
   clust_dist: 10000
+  clustermap:
+    height: 10
+    width: 15
 
 scDNA:
   Tumor_clone: 'Clone_Tum'
@@ -49,7 +62,7 @@ scDNA:
     min_cc: 2  
   BaseCellCalling:
     min_ac_cells: 2
-    min_ac_reads: 2
+    min_ac_reads: 3
 
 
 SComatic:
@@ -61,39 +74,36 @@ SComatic:
   BaseCellCalling:
     Min_cell_types: 2
     RNA_editing: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/SComatic/RNAediting/AllEditingSites.hg38.txt
-    min_distance: 5
+    min_distance: 0
     PoN_SR: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/SComatic/PoNs/PoN.scRNAseq.hg38.tsv
     gnomAD_db: /cluster/work/bewi/members/dondia/projects/long_reads_tree/ref/gnomAD
     max_gnomAD_VAF: 0.01
-    deltaVAF: 0.25
-    deltaCCF: 0.4
-
-  HCCV:
-    deltaVAF: 0.25
-    deltaCCF: 0.4
+    deltaVAF: 0.1
+    deltaCCF: 0.3
 
   SingleCellGenotype:
     alt_flag: All
     pvalue: 0.01
 
 BnpC:
-  outdir: '1kSteps.0.1-1dpa'
+  outdir: '3kSteps.0.001-5dpa'
   min_cells_per_mut: 5
   min_pos_cov: 3
-  mcmc_steps: 2000
+  mcmc_steps: 3000
   cup: 0
-  eup: 1e-9
+  eup: 0
   FP: -1
   FN: -1
   estimator: 'posterior'
   pp: [1,1]
   dpa:
-    B486: [1,0.1]
+    B486: [0.001,5]
     B497: [1,1]
     B500: [1,1]
   mut_order:
-    B486: /cluster/work/bewi/members/dondia/projects/long_reads_tree/LongSom_out/BnpC/BnpC_input/B486.order.tsv
+    B486: '' #/cluster/work/bewi/members/dondia/projects/long_reads_tree/LongSom_out/OvCa_LR/BnpC/BnpC_input/B486.order.tsv
     B497: ''
     B500: ''
+  
 inferCNV:
   ordering: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/LongSom/InferCNV/gene_ordering_file.txt
