--- a/config/config_OvCa_LR.yml
+++ b/config/config_OvCa_LR.yml
@@ -10,7 +10,7 @@ Run:
   # Run cell clustering with BnpC
   bnpc: True
   # Run fusion calling with CTAT-LR-Fusion
-  ctatfusion: False
+  ctatfusion: True
   # Run CNV calling with InferCNV
   infercnv: False
   # Generate various plots
@@ -68,6 +68,7 @@ SNVCalling:
     Cancer: ""
     NonCancer: ""
   min_ac_reads: 3
+  min_ac_cells: 2
   clust_dist: 10000
   clustermap:
     height: 10
@@ -79,11 +80,13 @@ scDNA:
   BaseCellCounter:
     min_mapping_quality: 30
     min_dp: 5
-    min_cc: 2  
+    min_cc: 1  
   BaseCellCalling:
     min_ac_cells: 2
     min_ac_reads: 3
 
+scDNAValidation:
+  min_depth: 17
 
 SComatic:
   chrM_contaminant: 'True'
@@ -96,10 +99,12 @@ SComatic:
     RNA_editing: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/SComatic/RNAediting/AllEditingSites.hg38.txt
     min_distance: 0
     PoN_SR: /cluster/work/bewi/members/dondia/projects/long_reads_tree/bin/SComatic/PoNs/PoN.scRNAseq.hg38.tsv
-    gnomAD_db: /cluster/work/bewi/members/dondia/projects/long_reads_tree/ref/gnomAD
+    gnomAD_db: /cluster/work/bewi/members/dondia/projects/long_reads_tree/ref/gnomAD_v4.1
     max_gnomAD_VAF: 0.01
     deltaVAF: 0.1
     deltaCCF: 0.3
+    min_ac_cells: 1
+    min_ac_reads: 1
 
   SingleCellGenotype:
     alt_flag: All
@@ -109,7 +114,7 @@ BnpC:
   outdir: '3kSteps.0.001-5dpa'
   min_cells_per_mut: 5
   min_pos_cov: 3
-  mcmc_steps: 3000
+  mcmc_steps: 1000
   cup: 0
   eup: 0
   FP: -1
@@ -121,7 +126,7 @@ BnpC:
     B497: [1,1]
     B500: [1,1]
   mut_order:
-    B486: '' #/cluster/work/bewi/members/dondia/projects/long_reads_tree/LongSom_out/OvCa_LR/BnpC/BnpC_input/B486.order.tsv
+    B486: '' #/cluster/work/bewi/members/dondia/projects/long_reads_tree/LongSom_out/OvCa_LR/BnpC/BnpC_input/B486.order.tsv'
     B497: ''
     B500: ''
   
