--- a/profile_simple/config.yaml
+++ b/profile_simple/config.yaml
@@ -1,28 +1,19 @@
-cluster:
-  mkdir -p logs/{rule} &&
-  sbatch
-    --parsable
-    --job-name={wildcards}-{rule}
-    --cpus-per-task={threads}
-    --mem-per-cpu="{resources.mem_mb}"
-    --time="{resources.runtime}"
-    --tmp={resources.disk_mb}
-    --output=logs/{rule}/{rule}-{wildcards}-%j.out.log
-    --error=logs/{rule}/{rule}-{wildcards}-%j.err.log
-default-resources:
-        # - partition=<name-of-default-partition>
-        # - qos=<name-of-quality-of-service>
-  - mem_mb=2000
-  - runtime=1200
-  - tmpdir='/scratch'
-restart-times: 0
-max-jobs-per-second: 10
-max-status-checks-per-second: 1
-local-cores: 1
+
+executor: slurm
 latency-wait: 60
 jobs: 500
-keep-going: True
-rerun-incomplete: True
-printshellcmds: True
-scheduler: greedy
-use-conda: True
+cores: 100
+
+default-resources:
+  cpus_per_task: 8
+  mem_mb_per_cpu: 1024
+  slurm_account: "'es_beere'"
+  tmpdir: "'/scratch'"
+  time: 1200
+  runtime: 1200
+
+set-threads:
+  BaseCellCounter_scDNACalling: 64
+set-resources:
+  BaseCellCounter_scDNACalling:
+    cpus_per_task: 64
